[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/Koopa/01.png" type="Texture" id=1]
[ext_resource path="res://sprites/Koopa/03.png" type="Texture" id=2]
[ext_resource path="res://sprites/Koopa/02.png" type="Texture" id=3]
[ext_resource path="res://scripts/koopa.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 6.93972

[sub_resource type="CircleShape2D" id=3]

[node name="koopa" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="anisprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( -1.67044, 4.56585 )
shape = SubResource( 2 )

[node name="rayD" type="RayCast2D" parent="."]
position = Vector2( 4.67722, 12.437 )
enabled = true
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="rayE" type="RayCast2D" parent="."]
position = Vector2( -7.12719, 12.437 )
enabled = true
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="dano" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="dano"]
position = Vector2( -2.11589, 2.56133 )
shape = SubResource( 3 )
[connection signal="area_entered" from="dano" to="." method="_on_dano_area_entered"]
